# umbrella

./: .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  de.swsnr.umbrella.desktop.in  deny.toml
.github/: dependabot.yml
.github/workflows/: gettext.yml  image.yml  test.yml
design/: sketch.ora
examples/: portalsecret.rs
po/: de.po  de.swsnr.umbrella.pot
resources/: de.swsnr.umbrella.metainfo.xml  de.swsnr.umbrella.metainfo.xml.in  resources.gresource.xml
resources/ui/: application-window.blp  application-window.ui  preferences-dialog.blp  preferences-dialog.ui
schemas/: de.swsnr.umbrella.gschema.xml
src/: app.rs  config.rs  gettext.rs  main.rs
src/app/: secrets.rs  widgets.rs
src/app/widgets/: application_window.rs  preferences_dialog.rs
supply-chain/: audits.toml  config.toml
