[package]
name = "umbrella"
homepage = "https://github.com/swsnr/umbrella"
repository = "https://github.com/swsnr/umbrella"
license = "MPL-2.0"
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]
# Our version number.  Since semver doesn't make much sense for UI applications
# which have no API we repurpose the version numer as follows:
#
# - major: Major new features or major changes to the UI, which may break the app for some users.
# - minor: User-visible features or bugfixes.
# - patch: Translation updates.
#
# Major and minor releases get release notes, but patch releases do not; this
# enables us to ship updates to translations whenever translators contributed
# new languages or made major updates, while still providing meaningful release
# notes for the last functional changes.
version = "0.0.1"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
adw = { package = "libadwaita", version = "0.7.0", features = ["v1_6"] }
gtk = { package = "gtk4", version = "0.9.5", features = ["gnome_47"] }
glib = { version = "0.20.7", features = ["log", "log_macros"] }
log = "0.4.22"
semver = "1.0.24"
libc = "0.2.169"

[build-dependencies]
glob = "0.3.1"
